--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
     "config": "^3.3.12",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -19,9 +20,12 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.13.2",
-    "nanoid": "^5.1.5",
+    "multer": "1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nanoid": "^4.0.2",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
@@ -32,6 +36,7 @@
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.16",
+    "@types/multer": "^1.4.12",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^22.14.1",
     "@types/pino": "^7.0.5",
