--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nanoid": "^4.0.2",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "prom-client": "^15.1.3",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
