--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/response-time": "^2.3.8",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.6.0",
     "config": "^3.3.12",
@@ -28,6 +29,7 @@
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
     "prom-client": "^15.1.3",
+    "response-time": "^2.3.3",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
