--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "pino-pretty": "^13.0.0",
     "prom-client": "^15.1.3",
     "response-time": "^2.3.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
@@ -47,6 +49,8 @@
     "@types/node": "^22.14.1",
     "@types/pino": "^7.0.5",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.1.4",
     "supertest": "^7.1.0",
